# 2-1

./: .bashrc  CMakeLists.txt  README.md  myscript.sh
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/turtle_control/: TurtleVelocity.h
catkin_ws/devel/lib/pkgconfig/: turtle_control.pc
catkin_ws/devel/lib/python2.7/dist-packages/turtle_control/msg/: _TurtleVelocity.py  __init__.py
catkin_ws/devel/lib/turtle_control/: turtle_controller
catkin_ws/devel/share/common-lisp/ros/turtle_control/msg/: TurtleVelocity.lisp  _package.lisp  _package_TurtleVelocity.lisp  turtle_control-msg.asd
catkin_ws/devel/share/gennodejs/ros/turtle_control/msg/: TurtleVelocity.js  _index.js
catkin_ws/devel/share/roseus/ros/turtle_control/: manifest.l
catkin_ws/devel/share/roseus/ros/turtle_control/msg/: TurtleVelocity.l
catkin_ws/devel/share/turtle_control/cmake/: turtle_control-msg-extras.cmake  turtle_control-msg-paths.cmake  turtle_controlConfig.cmake
catkin_ws/src/turtle_control/: CMakeLists.txt  package.xml
catkin_ws/src/turtle_control/config/: params.yaml
catkin_ws/src/turtle_control/launch/: turtle_control.launch
catkin_ws/src/turtle_control/msg/: TurtleVelocity.msg
catkin_ws/src/turtle_control/scripts/: publish_velocity.py
catkin_ws/src/turtle_control/src/: turtle_controller.cpp
common/: CMakeLists.txt
common/kalman/: CMakeLists.txt
common/math/: CMakeLists.txt
devel/include/fsd_common_msgs/: AsState.h  AsensingMessage.h  CanFrames.h  CarState.h  CarStateDt.h  Cone.h  ConeDbscan.h  ConeDetections.h  ConeDetectionsDbscan.h  ControlCommand.h  DecisionFlag.h  DrivingDynamics.h  EchievMessage.h  Feedback.h  InsDelta.h  Map.h  Mission.h  RemoteControlCommand.h  ResAndAmi.h  SkidpadGlobalCenterLine.h  Time.h  TrajectoryPoint.h  Visualization.h  YoloCone.h  YoloConeDetections.h  YoloConeDetectionsTrack.h  YoloConeTrack.h
devel/lib/fsd_common_msgs/: cone_projection_node  point_cloud_node
devel/lib/pkgconfig/: fsd_common_msgs.pc
devel/lib/python2.7/dist-packages/fsd_common_msgs/msg/: _AsState.py  _AsensingMessage.py  _CanFrames.py  _CarState.py  _CarStateDt.py  _Cone.py  _ConeDbscan.py  _ConeDetections.py  _ConeDetectionsDbscan.py  _ControlCommand.py  _DecisionFlag.py  _DrivingDynamics.py  _EchievMessage.py  _Feedback.py  _InsDelta.py  _Map.py  _Mission.py  _RemoteControlCommand.py  _ResAndAmi.py  _SkidpadGlobalCenterLine.py  _Time.py  _TrajectoryPoint.py  _Visualization.py  _YoloCone.py  _YoloConeDetections.py  _YoloConeDetectionsTrack.py  _YoloConeTrack.py  __init__.py
devel/share/common-lisp/ros/fsd_common_msgs/msg/: AsState.lisp  AsensingMessage.lisp  CanFrames.lisp  CarState.lisp  CarStateDt.lisp  Cone.lisp  ConeDbscan.lisp  ConeDetections.lisp  ConeDetectionsDbscan.lisp  ControlCommand.lisp  DecisionFlag.lisp  DrivingDynamics.lisp  EchievMessage.lisp  Feedback.lisp  InsDelta.lisp  Map.lisp  Mission.lisp  RemoteControlCommand.lisp  ResAndAmi.lisp  SkidpadGlobalCenterLine.lisp  Time.lisp  TrajectoryPoint.lisp  Visualization.lisp  YoloCone.lisp  YoloConeDetections.lisp  YoloConeDetectionsTrack.lisp  YoloConeTrack.lisp  _package.lisp  _package_AsState.lisp  _package_AsensingMessage.lisp  _package_CanFrames.lisp  _package_CarStateDt.lisp  _package_Cone.lisp  _package_ConeDbscan.lisp  _package_ConeDetectionsDbscan.lisp  _package_ControlCommand.lisp  _package_DecisionFlag.lisp  _package_DrivingDynamics.lisp  _package_EchievMessage.lisp  _package_Feedback.lisp  (+13 more)
devel/share/fsd_common_msgs/cmake/: fsd_common_msgs-msg-extras.cmake  fsd_common_msgs-msg-paths.cmake  fsd_common_msgsConfig.cmake
devel/share/gennodejs/ros/fsd_common_msgs/msg/: AsState.js  AsensingMessage.js  CanFrames.js  CarState.js  CarStateDt.js  Cone.js  ConeDbscan.js  ConeDetections.js  ConeDetectionsDbscan.js  ControlCommand.js  DecisionFlag.js  DrivingDynamics.js  EchievMessage.js  Feedback.js  InsDelta.js  Map.js  Mission.js  RemoteControlCommand.js  ResAndAmi.js  SkidpadGlobalCenterLine.js  Time.js  TrajectoryPoint.js  Visualization.js  YoloCone.js  YoloConeDetections.js  YoloConeDetectionsTrack.js  YoloConeTrack.js  _index.js
devel/share/roseus/ros/fsd_common_msgs/: manifest.l
devel/share/roseus/ros/fsd_common_msgs/msg/: AsState.l  AsensingMessage.l  CanFrames.l  CarState.l  CarStateDt.l  Cone.l  ConeDbscan.l  ConeDetections.l  ConeDetectionsDbscan.l  ControlCommand.l  DecisionFlag.l  DrivingDynamics.l  EchievMessage.l  Feedback.l  InsDelta.l  Map.l  Mission.l  RemoteControlCommand.l  ResAndAmi.l  SkidpadGlobalCenterLine.l  Time.l  TrajectoryPoint.l  Visualization.l  YoloCone.l  YoloConeDetections.l  YoloConeDetectionsTrack.l  YoloConeTrack.l
linux_practice/name/: show.txt
modules/: CMakeLists.txt
modules/A1/: CMakeLists.txt
modules/A2/: CMakeLists.txt
modules/A2/include/: A2.h
modules/M1/: CMakeLists.txt
modules/M2/: CMakeLists.txt
src/fsd_common_msgs/: CMakeLists.txt  package.xml
src/fsd_common_msgs/bag/: cone_detected.bag  lidar_cone_side_slam_state.bag
src/fsd_common_msgs/launch/: cvplay.launch  play.launch  pointcloud.launch
src/fsd_common_msgs/msg/: AsState.msg  AsensingMessage.msg  CanFrames.msg  CarState.msg  Cone.msg  ConeDbscan.msg  ConeDetectionsDbscan.msg  ControlCommand.msg  DecisionFlag.msg  DrivingDynamics.msg  EchievMessage.msg  Feedback.msg  InsDelta.msg  Map.msg  RemoteControlCommand.msg  ResAndAmi.msg  SkidpadGlobalCenterLine.msg  Time.msg  TrajectoryPoint.msg  Visualization.msg  YoloCone.msg  YoloConeDetections.msg  YoloConeDetectionsTrack.msg  YoloConeTrack.msg
src/fsd_common_msgs/rviz/: fsd_visualization.rviz
src/fsd_common_msgs/scripts/: subscriber.py
src/fsd_common_msgs/src/: ConeProject.cpp  PointCloud.cpp
