<?xml version="1.0"?>
<package format="2">
  <name>fsd_common_msgs</name>
  <version>0.0.0</version>
  <description>Messages</description>

  <maintainer email="chenshaohao@scutracing.com">chenshaohao</maintainer>
  <license>TODO</license>
  <author email="chenshaohao@scutracing.com">chenshaohao</author>


  <buildtool_depend>catkin</buildtool_depend>

  <!--For loading custom messages-->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>rosbag</build_depend>
  <exec_depend>rosbag</exec_depend>
  <build_depend>rosbag</build_depend>
  <exec_depend>rosbag</exec_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_depend>eigen_conversions</build_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <build_depend>message_filters</build_depend>
  <exec_depend>message_filters</exec_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>


  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
   <depend>can_msgs</depend>

  

  <export>
  </export>
</package>
